# Wolf

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
benchmark/: mnist_cpu.py
examples/: CMakeLists.txt  irisClassifier.cpp  main.cpp  mnistClassifier.cpp  singleNeuron.cpp  test.cpp  xortest.cpp
source/: CMakeLists.txt  wolf.h
source/math/: loss.h  rng.h  tensor.cpp  tensor.h  test.h
source/model/: AdamStepper.cpp  Layer.h  LayerFactory.h  LayerSaver.h  LinearLayer.cpp  LinearLayer.h  Loss.h  ReLU.cpp  ReLU.h  Sequential.cpp  Sequential.h  optimizers.h
source/utils/: data.h  make_batch.h  timer.h
